--- a/producer/src/main/resources/application.properties
+++ b/producer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=0.0.0.0
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
